# fast-crossmap

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
.devcontainer/cross-compile/: Dockerfile  Dockerfile.simple  README.md  build-all.sh  build-simple.sh
.github/wiki/: Advanced.md  Contributing.md  FAQ.md  Home.md  Installation.md  QuickStart.md  _Sidebar.md
.github/workflows/: release.yml
benches/: benchmark.rs
paper/: 01_download_data.sh  02_benchmark_bed.py  02b_benchmark_bed_multithread.py  03_benchmark_bam.py  03b_benchmark_bam_multithread.py  04_plot_performance.py  05_memory_profile.py  05b_memory_scalability.py  06_plot_memory.py  06b_plot_memory_scalability.py  07_accuracy_analysis.py  08_plot_accuracy.py  09_feature_audit.py  10_plot_features.py  11_plot_radar.py  12_run_all.sh  README.md  benchmark_quick.py  generate_sample_data.py
paper/sample_data/: README.md  sample.bed  sample.sam
scripts/: accuracy_analyzer.py  benchmark.sh  compare_outputs.py  feature_auditor.py  generate_test_data.py  memory_stability_test.py  memory_test.sh  plot_paper_figures.py  run_benchmarks.py  test_benchmarks.py  test_strict_mode.sh
src/: lib.rs  main.rs
src/core/: chain.rs  dna.rs  error.rs  index.rs  io.rs  mapper.rs  mod.rs
src/formats/: bam.rs  bed.rs  gff.rs  gvcf.rs  maf.rs  mod.rs  region.rs  vcf.rs  wig.rs
tests/: bam_properties.rs  bed_properties.rs  chain_properties.proptest-regressions  chain_properties.rs  crossmap_comparison.rs  crossmap_integration.rs  dna_properties.rs  gff_properties.rs  gvcf_properties.rs  index_properties.proptest-regressions  index_properties.rs  maf_properties.rs  mapper_properties.rs  region_properties.rs  vcf_properties.rs  wig_properties.rs
